src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>rC_Bios__External Cases</fullName>
        <description>Cases originating from constiuents</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>rC_Connect__External Cases</fullName>
        <description>(@Deprecated)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Research Rating</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Affiliation__c</fullName>
        <description>Affiliation or organization to which this case refers.</description>
        <inlineHelpText>Affiliation or organization to which this case refers.</inlineHelpText>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Group 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Subtopic__c</fullName>
        <description>Manually populated fiIndicates the second level differentiator of a Case type.</description>
        <inlineHelpText>Indicates the second level differentiator of a Case type.</inlineHelpText>
        <label>Subtopic</label>
        <picklist>
            <controllingField>rC_Bios__Topic__c</controllingField>
            <picklistValues>
                <fullName>Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone/Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not E-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mail Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Card Rejection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Card Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Not On Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anonymous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Acknowledgement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Topic__c</fullName>
        <description>Indicates the first level differentiator of a Case type.</description>
        <inlineHelpText>Indicates the first level differentiator of a Case type.</inlineHelpText>
        <label>Topic</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Information Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Preferences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledgement Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opt-Outs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comments</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Affiliation__c</fullName>
        <description>Affiliation or organization to which this case refers.</description>
        <inlineHelpText>Affiliation or organization to which this case refers.</inlineHelpText>
        <label>Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>NGO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Prospect_Development_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Prospect Development</label>
        <queue>Prospect_Development</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>rC_Bios__External_Cases</fullName>
        <active>true</active>
        <businessProcess>rC_Bios__External Cases</businessProcess>
        <description>Cases relating to Account and Contact support issues such as member queries, comments, and requests.</description>
        <label>External Cases</label>
    </recordTypes>
    <recordTypes>
        <fullName>rC_Connect__External_Cases</fullName>
        <active>false</active>
        <businessProcess>rC_Connect__External Cases</businessProcess>
        <description>(@Deprecated)</description>
        <label>External Cases (@Deprecated)</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>